# feidesk

./: CMakeLists.txt  README-zh.md  README.md  README_zh.md
feidesk/: CMakeLists.txt  feidesk.qrc  feidesk.rc  main.cpp  qkxaboutdialog.cpp  qkxaboutdialog.h  qkxaboutdialog.ui  qkxauthorizeconfirmdialog.cpp  qkxauthorizeconfirmdialog.h  qkxauthorizeconfirmdialog.ui  qkxchatinteraction.cpp  qkxchatinteraction.h  qkxchatstatusform.cpp  qkxchatstatusform.h  qkxchatstatusform.ui  qkxchatwindow.cpp  qkxchatwindow.h  qkxchatwindow.ui  qkxconnectionform.cpp  qkxconnectionform.h  qkxconnectionform.ui  qkxdeskdef.h  qkxdesktopftprequest.cpp  qkxdesktopftprequest.h  qkxdesktopftpwidget.cpp  qkxdesktopftpwidget.h  qkxdesktopftpwidget.ui  qkxdesktopplayform.cpp  qkxdesktopplayform.h  qkxdesktopplayform.ui  qkxdesktopplaystatusform.cpp  qkxdesktopplaystatusform.h  qkxdesktopplaystatusform.ui  qkxdesktopplaywindow.cpp  qkxdesktopplaywindow.h  qkxdesktopplaywindow.ui  qkxdesktoptoolform.cpp  qkxdesktoptoolform.h  qkxdesktoptoolform.ui  qkxdevicetreemodel.cpp  (+74 more)
feidesk/language/: feidesk_en.ts  feidesk_zh.qm  feidesk_zh.ts  release.bat  update.bat
feidesk/resource/: feidesk.icns  feidesk128x128.icns
feidesk/resource/qss/: default.qss
feidesk/richedit/: qkxmoviepool.cpp  qkxmoviepool.h  qkxtextbrowser.cpp  qkxtextbrowser.h  qkxtextcursor.cpp  qkxtextcursor.h  qkxtextobject.cpp  qkxtextobject.h
kxpty/: CMakeLists.txt  kpty.cpp  qkxpty.cpp  qkxpty.h  qkxpty_private.h  qkxpty_share.h  qkxptyclient.cpp  qkxptyclient.h  qkxptyprocess_unix.cpp  qkxptyprocess_unix.h  qkxptyprocess_win.cpp  qkxptyprocess_win.h  qkxptyrequest.cpp  qkxptyrequest.h  qkxptyrequestprivate.cpp  qkxptyrequestprivate.h  qkxptyserver.cpp  qkxptyserver.h  qkxptyserverprivate.cpp  qkxptyserverprivate.h
